# Play-with-Algorithms

./: .gitignore  12  README.md
00-Opening/: Chapter-0.key  Chapter-0.pptx
02-Sorting-Basic/: Chapter-2.key  Chapter-2.pptx
02-Sorting-Basic/01-Selection-Sort/: main.cpp
02-Sorting-Basic/02-1-Selection-Sort-Using-Template/: CMakeLists.txt  Student.h  main.cpp
02-Sorting-Basic/02-2-Selection-Sort-Using-Helper-Functions/: CMakeLists.txt  SortTestHelper.h  main.cpp
02-Sorting-Basic/02-Selection-Sort-Using-Template/: CMakeLists.txt  Student.h
02-Sorting-Basic/03-Insertion-Sort/: CMakeLists.txt  SelectionSort.h  SortTestHelper.h  main.cpp
02-Sorting-Basic/03-Selection-Sort-Generate-Test-Cases/: SortTestHelper.h  main.cpp
02-Sorting-Basic/03-Selection-Sort-Using-Helper-Functions/: CMakeLists.txt  SortTestHelper.h
02-Sorting-Basic/04-Insertion-Sort/: SortTestHelper.h  main.cpp
02-Sorting-Basic/04-Selection-Sort-Detect-Performance/: SortTestHelper.h  main.cpp
02-Sorting-Basic/05-Insertion-Sort/: SelectionSort.h  main.cpp
02-Sorting-Basic/05-Merge-Sort/: CMakeLists.txt  InsertionSort.h  SortTestHelper.h
02-Sorting-Basic/06-Insertion-Sort-Advance/: CMakeLists.txt  SelectionSort.h  SortTestHelper.h  main.cpp
02-Sorting-Basic/06-Merge-Sort-Advance/: CMakeLists.txt  (+3 more)
03-Sorting-Advance/: Chapter-3.key  Chapter-3.pptx
04-Heap/: Chapter-4.key  Chapter-4.pptx
05-Binary-Search-Tree/: Chapter-5.key  Chapter-5.pptx
05-Binary-Search-Tree/Course Code (C++)/10-The-Disadvantages-of-Binary-Search-Tree-and-More-Trees/: 10_The_Disadvantages_of_Binary_Search_Tree_and_More_Trees  BST.h  CMakeLists.txt  FileOps.h  SequenceST.h  main.cpp
06-Union-Find/: Chapter-6.key  Chapter-6.pptx
07-Graph-Basics/Course Code (C++)/07-BFS-and-Shortest-Path/: CMakeLists.txt  DenseGraph.h  Path.h  ReadGraph.h  ShortestPath.h  SparseGraph.h  main.cpp
07-Graph-Basics/Course Code (C++)/Chapter-07-Completed-Code/: CMakeLists.txt  DenseGraph.h  Graph  Path.h  RandomGraph.h  ReadGraph.h  ShortestPath.h  SparseGraph.h  main_component.cpp  main_component2.cpp  main_path.cpp
08-Minimum-Span-Trees/: Chapter-8.key  Chapter-8.pptx
08-Minimum-Span-Trees/06-Kruskal-Algorithm/: CMakeLists.txt  IndexMinHeap.h  KruskalMST.h  MinHeap.h  PrimMST.h  ReadGraph.h  SparseGraph.h  main_performance.cpp
08-Minimum-Span-Trees/Course Code (C++)/05-Implementation-of-Optimized-Prim-Algorithm/: CMakeLists.txt  DenseGraph.h  Edge.h  IndexMinHeap.h  LazyPrimMST.h  MinHeap.h  PrimMST.h  ReadGraph.h  SparseGraph.h  main_performance.cpp
08-Minimum-Span-Trees/Course Code (C++)/MinimumSpanTree/: CMakeLists.txt  Edge.h  IndexMinHeap.h  KruskalMST.h  LazyPrimMST.h  MinHeap.h  PrimMST.h  SparseGraph.h  main_mst.cpp  testG3.txt
09-Shortest-Path/: Chapter-9.key  Chapter-9.pptx
09-Shortest-Path/Course Code (C++)/Chapter-09-Completed-Code/: BellmanFord.h  CMakeLists.txt  Dijkstra.h  IndexMinHeap.h  ReadGraph.h  main_bellmanford.cpp  testG2.txt  testG_negative_circle.txt
10-Ending/: Chapter-10.key  Chapter-10.pptx
(+808 files in other folders)
